Se ajustaron los nombres de los contenedores

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </header>
     <div class="container">
         <div class="row">
-            <side class="side-menu__container"></side>
+            <side class="aside-menu__container"></side>
             <main class="main-principal__container"><h1>Hola</h1></main> 
-            <side class="side-right-principal__container"></side>
+            <side class="aside-right-principal__container"></side>
         </div>
     </div>
 </body>
