se cambio la etiqueta side a aside

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </header>
     <div class="container">
         <div class="row">
-            <side class="aside-menu__container"></side>
+            <aside class="aside-menu__container"></aside>
             <main class="main-principal__container"><h1>Hola</h1></main> 
-            <side class="aside-right-principal__container"></side>
+            <aside class="aside-right-principal__container"></aside>
         </div>
     </div>
 </body>
