--- a/post.html
+++ b/post.html
@@ -11,9 +11,9 @@
     <header class="header__container"></header>
     <div class="container">
         <div class="row">
-            <side class="aside-left-post__container"></side>
+            <aside class="aside-left-post__container"></aside>
             <main class="main-post__container"></main>
-            <side class="aside-right-post__container"></side>
+            <aside class="aside-right-post__container"></aside>
         </div>
     </div>
     <footer class="footer__container"></footer>
