Se agrego bootstrap

--- a/post.html
+++ b/post.html
@@ -16,6 +16,8 @@
             <side class="aside-right-post__container"></side>
         </div>
     </div>
-    <footer class="footer__container"></footer>
+    <footer class="footer__container">
+        footer
+    </footer>
 </body>
 </html>
