--- a/post.html
+++ b/post.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header__container"></header>
+    <header class="header__container">        
+    </header>
     <div class="container">
         <div class="row">
-            <side class="aside-left-post__container"></side>
-            <main class="main-post__container"></main>
-            <side class="aside-right-post__container"></side>
+            <aside class="aside-menu__container"></aside>
+            <main class="main-principal__container"><h1>Hola</h1></main> 
+            <aside class="aside-right-principal__container"></aside>
         </div>
     </div>
-    <footer class="footer__container"></footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
