--- a/post.html
+++ b/post.html
@@ -8,15 +8,61 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <header class="header__container"></header>
-    <div class="container">
+<body style="background-color: #ebebeb;">
+    <header class="header__container">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown link
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+    <div class="container my-3">
         <div class="row">
-            <aside class="aside-left-post__container d-flex">
-
+            <aside class="aside-left-post__container col-1 d-none d-md-block">
+                <div class="d-flex flex-column align-items-center mt-5">
+                <img src="./src/corazon.svg" class="mb-1">
+                <span class="mb-4">0</span>
+                <img src="./src/message.svg" class="mb-1" >
+                <span class="mb-4">0</span>
+                <img src="./src/mark.svg" class="mb-1">
+                <span class="mb-4">4</span>
+                <img src="./src/puntos.svg" >
+                </div>
             </aside>
-            <main class="main-post__container"></main>
-            <aside class="aside-right-post__container d-flex">
+            <main class="main-post__container col-8"><div class="card text-start">
+              <img class="card-img-top" src="holder.js/100px180/" alt="Title">
+              <div class="card-body">
+                <h4 class="card-title">Title</h4>
+                <p class="card-text">Body</p>
+              </div>
+            </div></main>
+            <aside class="aside-right-post__container  col-3 d-none d-lg-block">
                 <section class="info__user gap-2">
                     <div class="card" style="width: 18rem;  border-top: 30px solid #010b1b;">
                         <div class="info__nameUser d-flex ">
@@ -34,7 +80,7 @@
                         <p>24 dic 2017</p>
                         </div>
                     </div>
-                </div>
+                
                 </section>
                 <section>
                 <div class="info__extra mt-3">
@@ -70,22 +116,21 @@
                                 </div>
                             </div>       
                 </section>
-                <section>
-                    <div class="card my-3" style="width: 18rem;">
-                        <div class="info__anuncios d-flex ">
-                          <span class="text-dark m-3 col "> DEV Community</span> <img src="./src/puntos.svg" alt="" class="me-3">
-                        </div>
-                        <div class="card-body">
-                        <div class="d-grid gap-2">
-                        </div>
-                        <h3 class="card-text my-2  fw-bold" style="color: #525252;">   👋 Want more relevant content on DEV?</h3>
-                        <span class="fw-bold text-body-secondary fs-5">It's simple!</span>
-                        <p class="m-0">Go into your <a href="">settings</a>  and set your</p> <p class="fw-bold" style="color: #525252;">experience level.</p>
-                        <p>You will begin seeing slightly more appropriate content for your level.</p>
-                        </div>
-                    </div>
+               <section>
+                <div class="card my-3" style="width: 18rem;">
+                <div class="info__anuncios d-flex ">
+                  <span class="text-dark m-3 col "> DEV Community</span> <img src="./src/puntos.svg" alt="" class="me-3">
                 </div>
-                </section>
+                <div class="card-body">
+                <div class="d-grid gap-2">
+                </div>
+                <h3 class="card-text my-2  fw-bold" style="color: #525252;">   👋 Want more relevant content on DEV?</h3>
+                <span class="fw-bold text-body-secondary fs-5">It's simple!</span>
+                <p class="m-0">Go into your <a href="">settings</a>  and set your</p> <p class="fw-bold" style="color: #525252;">experience level.</p>
+                <p>You will begin seeing slightly more appropriate content for your level.</p>
+                </div>
+            </div>
+                 </section>
             </aside>
         </div>
     </div>
