se creo aside rigth

--- a/index.html
+++ b/index.html
@@ -18,31 +18,30 @@
   </head>
   <body>
     <header class="header__container">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary me-5">
-        <div class="container-fluid">
-          <a href="/" class="site-logo" aria-label="DEV Community Home">
-            <img
-              class="site-logo__img"
-              src="https://dev-to-uploads.s3.amazonaws.com/uploads/logos/resized_logo_UQww2soKuUsjaOGNB38o.png"
-              alt="DEV Community"
-            />
-          </a>
-          <div class="input-group mb-3">
-            <input type="text" class="form-control me-5" placeholder="Search..." aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Lupa</button>
-            <button class="button__create mx-2 rounded-pill">Create Post</button>
-            <button class="mx-2">campana</button>
-            <button class="mx-2">circulo</button>
-          </div>
-
-          </div>
-      </nav>
+      
     </header>
     <div class="container">
       <div class="row">
         <aside class="aside-menu__container"></aside>
         <main class="main-principal__container"><h1></h1></main>
-        <aside class="aside-right-principal__container">      
+        <aside class="aside-right-principal__container"> 
+          <section>
+            <div class="card" style="width: 18rem;">
+              <div class="card-header d-flex justify-content-between">
+                <h5>Listings</h5>
+                <span class="color__blue">See all</span>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">Supercharge your application's performance: Consuming Symfony messenger messager with Go</li>
+                <li class="list-group-item">Maximizing your IT system's potential: how to identify and resolve host performance and configuration issues</li>
+                <li class="list-group-item">Contenda Studio: Stretch your content futher</li>
+                <li class="list-group-item">Lessons Learned from a Developer Incorporating AI</li>
+                <li class="list-group-item">DevOps with AWS Champion, Heather Luna</li>
+                <span class="list-group-item d-flex justify-content-center">Create a Listing</span>
+              </ul>
+            </div>
+
+            </section>     
         </aside>
       </div>
     </div>
