--- a/post.html
+++ b/post.html
@@ -64,7 +64,7 @@
                 <section class="card__section">
                     <div class="card">
                         <img src="./src/mago.webp" class="card-img-top" alt="...">
-                        <section class="poster-information__container d-flex ps-3 pt-3 ">
+                        <section class="poster-information__container d-flex ps-4 pt-3 ">
                             <div class="image__container"><img class="rounded-circle" src="src/autoravatar.webp" alt="">
                             </div>
 
@@ -128,6 +128,9 @@
                                         }
                                     </code></pre>
                                   </div>
+                                  <div>
+                                    <img class="img-fluid" src="./src/video yotube.JPG" alt="">
+                                </div>
 
                                 <a href="#" class="btn btn-primary">Subscribe</a>
                         </div>
