--- a/post.html
+++ b/post.html
@@ -25,7 +25,37 @@
         <side class="aside-right-post__container"></side>
       </div>
     </div>
-    
+    <footer class="footer__container">
+        <p class="d-flex justify-content-center">
+         <span class="me-1">DEV Community</span>— A constructive and inclusive social network for software developers.
+          With you every step of your journey.
+        </p>
+        <ul class="d-flex justify-content-center">
+          <li class="no__point">Home</li>
+          <li class="ms-4">Listings</li>
+          <li class="ms-4">Podcats</li>
+          <li class="ms-4">Videos</li>
+          <li class="ms-4">Tags</li>
+          <li class="ms-4">FAQ</li>
+          <li class="ms-4">ForemShop</li>
+          <li class="ms-4">Advertise on DEV</li>
+          <li class="ms-4">About</li>
+          <li class="ms-4">Contact</li>
+          <li class="ms-4">Guides</li>
+          <li class="ms-4">Software comparisons</li>
+        </ul>
+        <ul class="d-flex justify-content-center">
+          <li class="no__point">Code of Conduct</li>
+          <li class="ms-4">Privacy Policy</li>
+          <li class="ms-4">Terms of use</li>
+        </ul>
+        <p class="d-flex justify-content-center">
+          Built on<span class="mx-1">Forem</span>— the<span class="mx-1">open source</span>software that powers<span class="mx-1">DEV</span>other
+          inclusive communities.
+        </p>
+        <p class="d-flex justify-content-center">Made with love and<span class="mx-1">Ruby on Rails.</span>DEV Community © 2016 - 2023.</p>
+      
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
