Se ajusta espacio entre contenedores

--- a/index.html
+++ b/index.html
@@ -14,23 +14,11 @@
 <body>
     <header class="header__container"></header>
     <div class="container">
-        <div class="row"> 
-            <aside class="aside-menu__container container column-3 d-none d-md-block">
+        <div class="row">
+            <aside class="aside-menu__container container d-none col-md-3 col-lg-3 d-md-block ps-4">
                 <section class="login__container">
                     <!-- card abajo -->
-                    <div class="card bg-light" style="width: 15rem; height: 21rem;">
-                        <!-- card abajo -->
-                        <div class="card-body">
-                          <h5 class="card-title fs-4">
-                            DEV Community is a community of 1,115,304 amazing developers
-                          </h5>
-                          <p class="card__text fs-6">
-                            We're a place where coders share, stay up-to-date and grow their careers.
-                        </p>
-                          <a href="#" class="btn btn-first__button btn-light btn-md border-primary" style="width: 13rem; height: 2.4rem;">Create account</a>
-                          <a href="#" class="btn btn-second__button btn-light btn-md " style="width: 13rem; height: 2.4rem;">Log in</a>                        
-                        </div>
-                      </div>
+                    
 
 
                       <div class="card first-icons__container" style="width: 15rem; height: 32rem;">
@@ -284,14 +272,7 @@
 
                 </section>
             </aside>
-
-            <main class="main-principal__container"><h1></h1></main> 
-            <side class="side-right-principal__container"></side>
-        </div>
-    </div>    
-        <div class="row">
-            <aside class="aside-menu__container"></aside>
-            <main class="main-principal__container col-sm-12 col-md-9 col-lg-6">
+            <main class="main-principal__container col-12 col-md-9 col-lg-6  ps-4">
                 <ul class="tabs__container nav nav-underline d-flex align-items-center">
                     <li class="item__tab nav-item ms-2">
                         <a class="nav-link active" aria-current="page" href="#">Relevant</a>
@@ -813,7 +794,7 @@
                     </div>
                 </section>
             </main>
-            <aside class="aside-right-principal__container"></aside>
+            <aside class="aside-right-principal__container d-none col-lg-3 d-lg-block"></aside>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
