aside_rigth_final

--- a/index.html
+++ b/index.html
@@ -32,16 +32,42 @@
                 <span class="color__blue">See all</span>
               </div>
               <ul class="list-group list-group-flush">
-                <li class="list-group-item">Supercharge your application's performance: Consuming Symfony messenger messager with Go</li>
-                <li class="list-group-item">Maximizing your IT system's potential: how to identify and resolve host performance and configuration issues</li>
-                <li class="list-group-item">Contenda Studio: Stretch your content futher</li>
-                <li class="list-group-item">Lessons Learned from a Developer Incorporating AI</li>
-                <li class="list-group-item">DevOps with AWS Champion, Heather Luna</li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Supercharge your application's performance: Consuming Symfony messenger messager with Go</a><p>products</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">🚀 Maximizing your IT system's potential: how to identify and resolve host performance and configuration issues</a><p>education</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Contenda Studio: Stretch your content futher</a><p>products</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Lessons Learned from a Developer Incorporating AI</a><p>mentors</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">DevOps with AWS Champion, Heather Luna</a><p>mentors</p></li>
                 <span class="list-group-item d-flex justify-content-center">Create a Listing</span>
               </ul>
             </div>
-
-            </section>     
+          </section>
+          <section class="margin__card">
+            <div class="card" style="width: 18rem;">
+              <div class="card-header d-flex justify-content-between">
+                <h5>#discuss</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Finding Your Coding Habitat: Where Do You Thrive Best?</a><span class="color__gold"><br>New</span></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Music Mondey—What are you listening to? (Chill Edition II)</a><p>23 comments</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Embarking on a journey: Joining the Dev Community</a><p>1 comment</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">What are Challengers do you face in Writing Technical Articles?</a><p>3 comments</p></li>
+              </ul>
+            </div>
+          </section>  
+          <section>
+            <div class="card" style="width: 18rem;">
+              <div class="card-header d-flex justify-content-between">
+                <h5>#watercooler</h5>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Music Mondey—What are you listening to? (Chill Edition II)</a><p>23 comments</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Meme Monday</a><p>53 comments</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Caption This!🤔💭</a><p>1 comment</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Rubyist Hangout Thread</a><p>1 comments</p></li>
+                <li class="list-group-item"><a class="link-underline-light text-dark" href="">Which Tech Trends Missed the Mark</a><p>4 comments</p></li>
+              </ul>
+            </div>
+          </section>      
         </aside>
       </div>
     </div>
