Se agrego la referencia al post y se cambio el container-fluid del nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header__container sticky-top">
         <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid d-flex align-items-center">
+            <div class="container d-flex align-items-center">
                 <div class="d-flex align-items-center">
                   <button class="btn btn-outline-success d-block d-md-none d-lg-none" type="submit" style="border:none; ">
                     <img src="./src/hamburger.svg" alt="">
@@ -324,7 +324,7 @@
                                     <span class="date__label">Jul 25</span>
                                 </div>
                             </div>
-                            <a href="" class="card-title__link link-underline-light text-dark">
+                            <a href="post.html" class="card-title__link link-underline-light text-dark">
                                 <h3 class="card-title card-title-lg mt-3 ms-md-5 ms-lg-5 d-none d-md-block d-lg-block">
                                     Fix VS Code Explorer for Content Projects
                                 </h3>
